fix arabic align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1740,6 +1740,11 @@ section,
   line-height: 1;
 }
 
+[dir="rtl"] .services .service-card .icon {
+  margin-right: 0px !important;
+  margin-left: 30px !important;
+}
+
 .services .service-card h3 {
   font-size: 22px;
   font-weight: 700;
